--- a/acknowledge.qmd
+++ b/acknowledge.qmd
@@ -4,11 +4,12 @@ title: "Acknowledgments"
 
 Creating this validation platform has been a team effort, including representatives from SCTO affiliated units across Switzerland. There are many people that have contributed to its development, beyond those mentioned in the author lists of the individual documents, be it by testing, reviewing, or discussions. We would like to thank all of them for their contributions.
 
+Alan Haynes, 
 Alfonso Rojas,
 André Moser,
 Arnaud Künzi, 
 Christina Huf,
-Christine Otienne,
+Christine Otieno,
 Christoph Combescure,
 Constantin Sluka,
 Cyril Jaksic,
@@ -28,9 +29,8 @@ Ramon Saccilotto,
 Roland John,
 Stefanie von Felten,
 Synove Otterbech,
-Ulrike Held
-
-We particularly thank Michael Coslovsky for being the driving force behind this project, and for his tireless efforts in bringing it to fruition.
+Ulrike Held, 
+and many others.
 
 Furthermore, this work builds off the ideas of various other groups, such as:
 
