--- a/wi/running_tests.qmd
+++ b/wi/running_tests.qmd
@@ -12,6 +12,8 @@ format-links:
     text: PDF
     icon: file-pdf
     target: "_blank"
+execute:
+  freeze: auto
 ---
 
 ::: {.callout-note collapse="true" title="Document development, review and version history"}
